docs/7.55/md/abenbusiness_object_glosry.md
---
title: "Business Object"
description: |
  BO for short. A BO represents the data and behavior of an object in the real world, similar to an object in object-oriented programming. A BO supports the specific requirements of business programming. Typical BOs represent a sales order, a flight booking, or a product. A BO wraps access to the asso
version: "7.55"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenbusiness_object_glosry.htm"
abapFile: "abenbusiness_object_glosry.htm"
keywords: ["do", "if", "try", "data", "abenbusiness", "object", "glosry"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_glossary.htm) → 

Business Object

BO for short. A BO represents the data and behavior of an object in the real world, similar to an object in object-oriented programming. A BO supports the specific requirements of business programming. Typical BOs represent a sales order, a flight booking, or a product. A BO wraps access to the associated data, whose persistence is transparent for the user of the BO. The data of a BO can be located in one or more database tables or also in other repositories. The behavior of a BO for reading and changing access to its data is based on best practices that have proved to be suitable for such accesses. Access to business data using a BO makes it easier for application programmers to apply such best practices. On an [AS ABAP](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenas_abap_glosry.htm "Glossary Entry"), BOs are supported by different frameworks, where [RAP BOs](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenrap_bo_glosry.htm "Glossary Entry") are best integrated into ABAP.